swagger updates, redis host changed
