# app/Http/Controllers/Api/v1/GenderController.php
@@ -9,6 +9,21 @@ use Illuminate\Http\JsonResponse;
 class GenderController extends BaseController
 {
 
+    /**
+     * @OA\Get (
+     *     path="/api/v1/genders",
+     *     summary = "List of genders",
+     *     operationId="genders.list",
+     *     tags={"Genders"},
+     *     security={ {"bearer": {} }},
+     *     @OA\Response(
+     *         response="200",
+     *         description="Genders",
+     *     )
+     * )
+     *
+     * @return JsonResponse
+     */
     public function list(): JsonResponse
     {
         return $this->successResponse(Gender::query()->get());
